--- a/style.css
+++ b/style.css
@@ -12,10 +12,10 @@ img{
 }
 
 :root{
-    --bg-color: #ffffff;
+    --bg-color: #fafbfc;
     --text-color: #000000;
     --radius-children: 12px;
-    --background-color-child: #d3d3d3;
+    --background-color-child: #cfcfcf;
     --display-flex: flex;
 }
 #night-background-color{
@@ -25,7 +25,7 @@ img{
 body{
     min-height: 100%;
     overflow: hidden;
-    background-color: var(--bg-color);
+    background: radial-gradient(circle, #f4f6f7 15%, #e3e8eb 85%);
     display: var(--display-flex);
     flex-direction: column;
     overflow-y: auto;
@@ -295,75 +295,68 @@ body{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin-top: 10px;
+    margin-top: 15px;
+    padding: 10px 15px;
+    background-color: var(--background-color-child);
+    border-radius: var(--radius-children);
 
     .header-text{
         width: 100%;
-        background-color: var(--background-color-child);
-        border-radius: var(--radius-children);
         padding: 10px;
-        margin-block: 10px;
         text-align: center;
+        font-size: 20px;
+        border-bottom: 2px solid #aaaaaa;
     };
 
-    .body-element{
+    .day-forecast-description{
         width: 100%;
-        background-color: var(--background-color-child);
-        border-radius: var(--radius-children);
+        height: max-content;
         display: var(--display-flex);
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        border-bottom: 2px solid #aaaaaa;
+        padding: 10px;
+        margin-block: 5px;
+        font-size: 18px;
+        text-align: center;
+
+        img{
+            height: 75px;
+            width: 75px;
+            filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.2));
+        };
+    };
+
+    .uv-element{
+        width: 100%;
+        height: min-content;
+        display: var(--display-flex);
+        align-items: center;
+        justify-content: flex-start;
+        border-bottom: 2px solid #aaaaaa;
         padding: 5px;
-        margin: 5px;
-
-        .day-forecast-description{
-            width: 100%;
-            height: max-content;
-            display: var(--display-flex);
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            flex-wrap: wrap;
-            border-bottom: 2px solid #149DFF;
-            padding: 5px;
-            margin-bottom: 5px;
-            font-size: 18px;
-            text-align: center;
-
-            img{
-                height: 75px;
-                width: 75px;
-                filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.2));
-            };
-        };
-
-        .uv-element{
-            width: 100%;
-            height: min-content;
-            display: var(--display-flex);
-            align-items: center;
-            justify-content: flex-start;
-            border-bottom: 2px solid #149DFF;
-            padding: 5px;
-            margin-block: 5px;
-            gap: 10px;
+        margin-block: 5px;
+        gap: 10px;
     
-            img{
-                width: 40px;
-                height: 40px;
-            };
+        img{
+            width: 40px;
+            height: 40px;
         };
+    };
 
-        .minmax-temperature{
-            width: 100%;
-            height: min-content;
-            display: var(--display-flex);
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            margin-bottom: 5px;
-            border-bottom: 2px solid #149DFF;
+    .minmax-temperature{
+        width: 100%;
+        height: min-content;
+        display: var(--display-flex);
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-bottom: 5px;
+        border-bottom: 2px solid #aaaaaa;
             
-            div{
+        div{
                 width: 100%;
                 display: var(--display-flex);
                 align-items: center;
@@ -372,35 +365,35 @@ body{
                 gap: 5px;
                 padding-block: 5px;
                 text-align: center;
-            };
         };
+    };
 
-        .avg-humidity-element{
-            width: 100%;
-            display: var(--display-flex);
-            justify-content: flex-start;
-            align-items: center;
-            margin-block: 5px;
-            padding-block: 5px;
-            border-bottom: 2px solid #149DFF;
-            gap: 5px;
-            text-align: center;
-        };
+    .avg-humidity-element{
+        width: 100%;
+        display: var(--display-flex);
+        justify-content: flex-start;
+        align-items: center;
+        margin-block: 5px;
+        padding-block: 5px;
+        border-bottom: 2px solid #aaaaaa;
+        gap: 5px;
+        text-align: center;
+    };
 
-        .chances-element{
-            width: 100%;
-            display: var(--display-flex);
-            justify-content: center;
-            align-items: flex-start;
-            flex-direction: column;
-            margin-top: 5px;
-            text-align: center;
+    .chances-element{
+        width: 100%;
+        display: var(--display-flex);
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        flex-wrap: wrap;
+        margin-top: 5px;
+        text-align: center;
 
-            h4{
-                padding: 5px;
-                margin-left: 10%;
-                font-size: 18px;
-            };
+        h4{
+            padding: 5px;
+            margin-left: 10%;
+            font-size: 18px;
         };
     };
 }
@@ -575,7 +568,7 @@ body{
 }
 
 .shimmer-element{
-    --background-color-child: #ECECEC;
+    --background-color-child: #d6dbde;
     width: 100%;
     height: min-content;
     display: var(--display-flex);
@@ -663,25 +656,16 @@ body{
 
     .day-forecast-card{
         height: 525px;
-        width: 315px;
+        width: 310px;
         display: var(--display-flex);
         align-items: center;
         justify-content: center;
         flex-direction: column;
         margin: 5px 0 0 10px;
 
-        .header-card{
-            height: 50px;
-            width: 100%;
-            background-color: var(--background-color-child);
-            border-radius: var(--radius-children);
-            padding: 10px;
-            margin-block: 10px;
-        };
-
         .body-card{
             width: 100%;
-            height: 445px;
+            height: 100%;
             border-radius: var(--radius-children);
             background-color: var(--background-color-child);
             margin: 5px;
